--- a/app/views/shared/_new_offer_form.html.erb
+++ b/app/views/shared/_new_offer_form.html.erb
@@ -1,11 +1,14 @@
 <div class="Vehicle">
-  <p>some stuff</p>
+  <%# TODO: Add relevant form %>
+  <p>Vehicle stuff</p>
 </div>
 
 <div class="Service">
+  <%# TODO: Add relevant form %>
   <p>some stuff</p>
 </div>
 
 <div class="Property">
+  <%# TODO: Add relevant form %>
   <p>some stuff</p>
 </div>
