--- a/app/views/offers/new.html.erb
+++ b/app/views/offers/new.html.erb
@@ -1,8 +1,8 @@
-<main class="mt-3 flex flex-col justify-center m-auto w-full xl:w-1/3 px-4">
+<main class="mt-3 flex flex-col justify-center m-auto w-full xl:w-1/2 px-4">
 
   <%# TODO: Add a select button and options. Depending on the options pull the relevant form %>
 
-  <section class="mb-3 select optional offer_offerable_type"><label class="form-label select optional mr-4 mb-4">Offerable type</label>
+  <section class="mb-3 w-full flex items-center justify-between select optional offer_offerable_type"><label class="form-label select optional text-lg font-bold">Offerable type</label>
     <select class="form-select select optional rounded-xl" name="offer[offerable_type]" id="offer_offerable_type">
       <option value="">Pick an offer type</option>
       <option value="Property">Property</option>
@@ -98,12 +98,12 @@
 
     // selectButton.addClass("rounded-xl");
     $("select").addClass("rounded-md");
-    $("textarea").addClass("rounded-md");
+    $("textarea").addClass("rounded-md shadow-none focus:bg-gray-50");
     $("input").addClass("rounded-md");
     $("#vehicle_photos").removeClass("rounded-md");
     $("#property_photos").removeClass("rounded-md");
     $("#service_photos").removeClass("rounded-md");
-    $("form div").addClass("flex justify-between");
+    $("form div").addClass("flex justify-between items-center");
     $(".submit-button").removeClass("justify-between");
 
 
