Worked on the landing page a bit.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,9 @@
   </head>
 
   <body>
-    <%= render "shared/navbar" %>
+    <% unless request.original_url == landing_url %>
+      <%= render "shared/navbar" %>
+    <% end %>
     <%= render "shared/flashes" %>
 
     <%= yield %>
