Working on action cable. Little to go.

--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,140 +1,170 @@
-<div class="flex-1 p-2 sm:p-6 justify-between flex flex-col h-screen">
+<div class="flex-1 p-2 sm:p-4 justify-between flex flex-col h-screen" data-controller="chat-subscription">
    <!-- User Info Section -->
-<div class="flex sm:items-center justify-between py-3 border-b-2 border-gray-200">
-   <!-- User Avatar and Info -->
-   <div class="relative flex items-center space-x-4">
-      <!-- Online Status Indicator (You can replace this with your own indicator) -->
-      <div class="relative">
-         <span class="absolute text-green-500 right-0 bottom-0">
-            <svg width="20" height="20">
-               <circle cx="8" cy="8" r="8" fill="currentColor"></circle>
-            </svg>
-         </span>
+  <div class="flex items-center justify-between p-1 border-b-2 border-gray-200">
+    <!-- User Avatar and Info -->
+    <div class="relative flex items-center space-x-4">
+        <!-- Online Status Indicator (You can replace this with your own indicator) -->
+        <div class="relative">
+          <%# TODO: Here's online button. Can display or not when the user is online or not. %>
+          <span class="absolute text-green-500 right-0 bottom-0">
+              <svg width="20" height="20">
+                <circle cx="8" cy="8" r="8" fill="currentColor"></circle>
+              </svg>
+          </span>
 
-         <!-- User Avatar -->
-         <% other_user = @chat.recipients.reject { |user| user == current_user }.first %>
-         <%= cl_image_tag other_user.profile_photo.key, class: "w-10 sm:w-16 h-10 sm:h-16 rounded-full" %>
-      </div>
+          <!-- User Avatar -->
+          <% other_user = @chat.recipients.reject { |user| user == current_user }.first %>
+          <%= cl_image_tag other_user.profile_photo.key, class: "w-10 sm:w-16 h-10 sm:h-16 rounded-full" %>
+        </div>
 
-      <!-- User Information -->
-      <div class="flex flex-col leading-tight">
-         <!-- User's Full Name -->
-         <div class="text-2xl mt-1 flex items-center">
-            <!-- User's Full Name (Replace with actual name) -->
-            <span class="text-gray-700 mr-3"><%= @chat.recipients.first.full_name %></span>
-         </div>
+        <!-- User Information -->
+        <div class="flex flex-col leading-tight">
+          <!-- User's Full Name -->
+          <div class="text-2xl mt-1 flex items-center">
+              <!-- User's Full Name (Replace with actual name) -->
+              <span class="text-gray-700 mr-3"><%= link_to other_user.full_name, user_profile_path(other_user) %>
+              </span>
+          </div>
 
-         <!-- User's Role/Description (Replace with actual role/description) -->
-         <span class="text-lg text-gray-600"><%= other_user.account_type %> Account</span>
-      </div>
-   </div>
+          <!-- User's Role/Description (Replace with actual role/description) -->
+          <span class="text-lg text-gray-600"><%= other_user.account_type %> Account</span>
+        </div>
+    </div>
 
-   <!-- User Action Buttons -->
-   <div class="flex items-center space-x-2">
-      <!-- Action Button 1 (Replace with your own action) -->
-      <button type="button" class="inline-flex items-center justify-center rounded-lg border h-10 w-10 transition duration-500 ease-in-out text-gray-500 hover:bg-gray-300 focus:outline-none">
-         <!-- Action Icon 1 (Replace with your own icon) -->
-         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11a7 7 0 01-7 7m0 0a7 7 0 01-7-7m7 7v4m0 0H8m4 0h4m-4-8a3 3 0 01-3-3V5a3 3 0 116 0v6a3 3 0 01-3 3z"></path>
-         </svg>
-      </button>
+    <!-- User Action Buttons -->
+    <div class="flex items-center space-x-2">
+        <!-- Action Button 1 (Replace with your own action) -->
+        <button type="button" class="inline-flex items-center justify-center rounded-lg border h-10 w-10 transition duration-500 ease-in-out text-gray-500 hover:bg-gray-300 focus:outline-none">
+          <!-- Action Icon 1 (Replace with your own icon) -->
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11a7 7 0 01-7 7m0 0a7 7 0 01-7-7m7 7v4m0 0H8m4 0h4m-4-8a3 3 0 01-3-3V5a3 3 0 116 0v6a3 3 0 01-3 3z"></path>
+          </svg>
+        </button>
 
-      <!-- Action Button 2 (Replace with your own action) -->
-      <button type="button" class="inline-flex items-center justify-center rounded-lg border h-10 w-10 transition duration-500 ease-in-out text-gray-500 hover:bg-gray-300 focus:outline-none">
-         <!-- Action Icon 2 (Replace with your own icon) -->
-         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"></path>
-         </svg>
-      </button>
+        <!-- Action Button 2 (Replace with your own action) -->
+        <button type="button" class="inline-flex items-center justify-center rounded-lg border h-10 w-10 transition duration-500 ease-in-out text-gray-500 hover:bg-gray-300 focus:outline-none">
+          <!-- Action Icon 2 (Replace with your own icon) -->
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"></path>
+          </svg>
+        </button>
 
-      <!-- Action Button 3 (Replace with your own action) -->
-      <button type="button" class="inline-flex items-center justify-center rounded-lg border h-10 w-10 transition duration-500 ease-in-out text-gray-500 hover:bg-gray-300 focus:outline-none">
-         <!-- Action Icon 3 (Replace with your own icon) -->
-         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"></path>
-         </svg>
-      </button>
-   </div>
-</div>
+        <!-- Action Button 3 (Replace with your own action) -->
+        <button type="button" class="inline-flex items-center justify-center rounded-lg border h-10 w-10 transition duration-500 ease-in-out text-gray-500 hover:bg-gray-300 focus:outline-none">
+          <!-- Action Icon 3 (Replace with your own icon) -->
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"></path>
+          </svg>
+        </button>
+    </div>
+  </div>
 
 
-   <!-- Messages Section -->
-   <div id="messages" class="flex flex-col space-y-4 p-3 overflow-y-auto scrollbar-thumb-blue scrollbar-thumb-rounded scrollbar-track-blue-lighter scrollbar-w-2 scrolling-touch">
-      <% @chat.messages.each do |message| %>
-         <% if message.user == current_user %>
-            <!-- Message from current user -->
-            <div class="chat-message flex items-end justify-end">
-               <!-- Message Content -->
-               <div class="flex flex-col space-y-2 text-xs max-w-xs mx-2 order-1 items-end">
-                  <div>
-                     <span class="px-2 py-1 text-base rounded-lg inline-block rounded-br-none bg-blue-600 text-white">
-                        <%= message.content %>
-                     </span>
-                  </div>
-               </div>
-               <!-- User Avatar -->
-               <%= cl_image_tag message.user.profile_photo.key, class: "w-10 h-10 rounded-full order-2" %>
-            </div>
-         <% else %>
-            <!-- Message from other user -->
-            <div class="chat-message flex items-end">
-               <!-- User Avatar -->
-               <%= cl_image_tag message.user.profile_photo.key, class: "w-10 h-10 rounded-full order-1" %>
-               <!-- Message Content -->
-               <div class="flex flex-col space-y-2 text-xs max-w-xs mx-2 order-2 items-start">
-                  <div>
-                     <span class="px-2 py-1 text-base rounded-lg inline-block rounded-bl-none bg-gray-300 text-gray-600">
-                        <%= message.content %>
-                     </span>
-                  </div>
-               </div>
-            </div>
-         <% end %>
-      <% end %>
 
-   </div>
+  <!-- Messages Section -->
+  <div id="messages"  data-chat-subscription-target="messages" class="flex flex-col space-y-4 p-3 overflow-y-auto scrollbar-thumb-blue scrollbar-thumb-rounded scrollbar-track-blue-lighter scrollbar-w-2 scrolling-touch" data-chat-subscription-chat-id-value="<%= @chat.id %>">
+    <% @chat.messages.each do |message| %>
+        <% if message.user == current_user %>
+          <!-- Message from current user -->
+          <div class="chat-message flex items-end justify-end">
+              <!-- Message Content -->
+              <div class="flex flex-col space-y-2 text-xs max-w-xs mx-2 order-1 items-end">
+                <div>
+                    <span class="px-2 py-1 text-lg rounded-lg inline-block rounded-br-none bg-orange-500 text-white">
+                      <%= message.content %>
+                    </span>
+                </div>
+              </div>
+              <!-- User Avatar -->
+              <%= cl_image_tag message.user.profile_photo.key, class: "w-10 h-10 rounded-full order-2" %>
+          </div>
+        <% else %>
+          <!-- Message from other user -->
+          <div class="chat-message flex items-end">
+              <!-- User Avatar -->
+              <%= cl_image_tag message.user.profile_photo.key, class: "w-10 h-10 rounded-full order-1" %>
+              <!-- Message Content -->
+              <div class="flex flex-col space-y-2 text-xs max-w-xs mx-2 order-2 items-start">
+                <div>
+                    <span class="px-2 py-1 text-lg rounded-lg inline-block rounded-bl-none bg-gray-700 text-gray-200">
+                      <%= message.content %>
+                    </span>
+                </div>
+              </div>
+          </div>
+        <% end %>
+    <% end %>
 
-   <!-- Message Input Section -->
-   <div class="border-t-2 border-gray-200 px-4 pt-4 mb-2 sm:mb-0 ">
-      <div class="relative flex">
-         <span class="absolute inset-y-0 flex items-center">
-            <button type="button" class="inline-flex items-center justify-center rounded-full h-12 w-12 transition duration-500 ease-in-out text-gray-500 hover:bg-gray-300 focus:outline-none">
-               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6 text-gray-600">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11a7 7 0 01-7 7m0 0a7 7 0 01-7-7m7 7v4m0 0H8m4 0h4m-4-8a3 3 0 01-3-3V5a3 3 0 116 0v6a3 3 0 01-3 3z"></path>
-               </svg>
-            </button>
-         </span>
+  </div>
 
-         <input type="text" placeholder="Write your message!" class="w-full focus:outline-none focus:placeholder-gray-400 text-gray-600 placeholder-gray-600 pl-12 bg-gray-200 rounded-md py-4">
-         <div class="absolute right-0 items-center inset-y-0 hidden sm:flex">
-            <button type="button" class="inline-flex items-center justify-center rounded-full h-10 w-10 transition duration-500 ease-in-out text-gray-500 hover:bg-gray-300 focus:outline-none">
-               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6 text-gray-600">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.172 7l-6.586 6.586a2 2 0 102.828 2.828l6.414-6.586a4 4 0 00-5.656-5.656l-6.415 6.585a6 6 0 108.486 8.486L20.5 13"></path>
-               </svg>
-            </button>
-            <button type="button" class="inline-flex items-center justify-center rounded-full h-10 w-10 transition duration-500 ease-in-out text-gray-500 hover:bg-gray-300 focus:outline-none">
-               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6 text-gray-600">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 9a2 2 0 012-2h.93a2 2 0 001.664-.89l.812-1.22A2 2 0 0110.07 4h3.86a2 2 0 011.664.89l.812 1.22A2 2 0 0018.07 7H19a2 2 0 012 2v9a2 2 0 01-2 2H5a2 2 0 01-2-2V9z"></path>
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 13a3 3 0 11-6 0 3 3 0 016 0z"></path>
-               </svg>
-            </button>
-            <button type="button" class="inline-flex items-center justify-center rounded-full h-10 w-10 transition duration-500 ease-in-out text-gray-500 hover:bg-gray-300 focus:outline-none">
-               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6 text-gray-600">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14.828 14.828a4 4 0 01-5.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-               </svg>
-            </button>
-            <button type="button" class="inline-flex items-center justify-center rounded-full px-3 py-3 transition duration-500 ease-in-out text-white bg-blue-500 hover:bg-blue-400 focus:outline-none mr-1">
-               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="h-6 w-6 transform rotate-90">
-                  <path d="M10.894 2.553a1 1 0 00-1.788 0l-7 14a1 1 0 001.169 1.409l5-1.429A1 1 0 009 15.571V11a1 1 0 112 0v4.571a1 1 0 00.725.962l5 1.428a1 1 0 001.17-1.408l-7-14z"></path>
-               </svg>
-            </button>
-         </div>
-      </div>
-   </div>
+  <!-- Message Input Section -->
+  <div class="border-t-2 border-gray-200 px-4 pt-4 mb-16 ">
+    <div class="relative flex">
+        <span class="absolute inset-y-0 flex items-center">
+          <button type="button" class="inline-flex items-center justify-center rounded-full h-12 w-12 transition duration-500 ease-in-out text-gray-500 hover:bg-gray-300 focus:outline-none">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6 text-gray-600">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11a7 7 0 01-7 7m0 0a7 7 0 01-7-7m7 7v4m0 0H8m4 0h4m-4-8a3 3 0 01-3-3V5a3 3 0 116 0v6a3 3 0 01-3 3z"></path>
+              </svg>
+          </button>
+        </span>
+
+        <input type="text" id="messageInput" placeholder="Write your message!" class="w-full focus:outline-none focus:placeholder-gray-400 text-gray-600 placeholder-gray-600 pl-12 bg-gray-200 rounded-md py-4">
+        <div class="absolute right-0 items-center inset-y-0 flex">
+          <button type="button" class="inline-flex items-center justify-center rounded-full h-10 w-10 transition duration-500 ease-in-out text-gray-500 hover:bg-gray-300 focus:outline-none">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6 text-gray-600">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.172 7l-6.586 6.586a2 2 0 102.828 2.828l6.414-6.586a4 4 0 00-5.656-5.656l-6.415 6.585a6 6 0 108.486 8.486L20.5 13"></path>
+              </svg>
+          </button>
+          <button type="button" class="inline-flex items-center justify-center rounded-full h-10 w-10 transition duration-500 ease-in-out text-gray-500 hover:bg-gray-300 focus:outline-none">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6 text-gray-600">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 9a2 2 0 012-2h.93a2 2 0 001.664-.89l.812-1.22A2 2 0 0110.07 4h3.86a2 2 0 011.664.89l.812 1.22A2 2 0 0018.07 7H19a2 2 0 012 2v9a2 2 0 01-2 2H5a2 2 0 01-2-2V9z"></path>
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 13a3 3 0 11-6 0 3 3 0 016 0z"></path>
+              </svg>
+          </button>
+          <button type="button" class="inline-flex items-center justify-center rounded-full h-10 w-10 transition duration-500 ease-in-out text-gray-500 hover:bg-gray-300 focus:outline-none">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6 text-gray-600">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14.828 14.828a4 4 0 01-5.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+              </svg>
+          </button>
+          <button type="button" id="sendMessageButton" class="inline-flex items-center justify-center rounded-full px-3 py-3 transition duration-500 ease-in-out text-white bg-blue-500 hover:bg-blue-400 focus:outline-none mr-1">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="h-6 w-6 transform rotate-90">
+                <path d="M10.894 2.553a1 1 0 00-1.788 0l-7 14a1 1 0 001.169 1.409l5-1.429A1 1 0 009 15.571V11a1 1 0 112 0v4.571a1 1 0 00.725.962l5 1.428a1 1 0 001.17-1.408l-7-14z"></path>
+              </svg>
+          </button>
+        </div>
+    </div>
+  </div>
 </div>
 <%# TODO:  %>
 <%= simple_form_for @message, html: { class: "hidden" } do |f| %>
   <%= f.hidden_field :chat_id, value: @chat.id %>
-  <%= f.input :content %>
+  <%= f.input :content, as: :string, input_html: { id: "messageInput" } %>
+  <%= f.hidden_field :content, id: "hiddenContentField" %>
   <%= f.submit %>
 <% end %>
+
+<script>
+  $(document).ready(function() {
+    // Scroll to the bottom of the messages div
+    $("#messages").scrollTop($("#messages")[0].scrollHeight);
+    // When the button is clicked, submit the form
+    $("#sendMessageButton").click(function() {
+      event.preventDefault(); // Prevent the default form submission
+      sendMessage();
+    });
+
+    $("#messageInput").keypress(function(event) {
+        if (event.which === 13) {
+            event.preventDefault(); // Prevent the default form submission
+            sendMessage();
+        }
+    });
+
+    function sendMessage() {
+        let content = $("#messageInput").val();
+        $("#hiddenContentField").val(content); // Update the hidden field
+        $("form").submit();
+    }
+
+  });
+</script>
