--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -247,15 +247,15 @@
         </div>
     </main>
 
-    <footer class="bg-gray-200">
+    <footer class="bg-gray-800">
         <div class="container mx-auto px-6 py-3 flex justify-between items-center">
             <div class="flex items-center">
               <a href="/home" class="text-xl font-bold text-gray-500 hover:text-gray-400">
               <%= image_tag asset_path('brand-logo.svg'), class: "h-14 w-14 mr-4" %>
             </a>
-            <span class="w-full text-gray-500 text-center text-xl font-semibold">Myriad Market</span>
+            <span class="w-full text-white text-center text-xl font-semibold">Myriad Market</span>
             </div>
-            <p class="py-2 text-gray-500 sm:py-0">All rights reserved</p>
+            <p class="py-2 text-white sm:py-0">All rights reserved</p>
         </div>
     </footer>
 </div>
